--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,7 +2,6 @@
 network = CRAN2
 sim-time-limit = 120000s
 repeat = 6
-simtime-resolution = ms
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
 
@@ -238,6 +237,8 @@ CRAN2.cellularSystem.compression_rate = 20
 ## 		WARMUP Check 	##
 ##########################
 
+## CASE A ##
+
 ## Lognormal size distribution case ##
 [Config warmup-extr-caseA_log]
 sim-time-limit = 1800s													# one Hour
@@ -259,14 +260,46 @@ CRAN2.cellularSystem.dr = 1.4Mbps
 CRAN2.as.sizeMean = 1500		
 CRAN2.as.sizeDistribution = 1
 
+## CASE B ##
+## Lognormal size distribution case ##
+[Config warmup-extr-caseB_log]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.timeMean = 0.01
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.cellularSystem.dr = 1.4Mbps
+CRAN2.as.sizeMean = 7.313
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 5
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+## Exponential size distribution case ##
+[Config warmup-extr-caseB_exp]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.4Mbps
+CRAN2.as.sizeMean = 1500		
+CRAN2.as.sizeDistribution = 1
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 5
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
 ############################################
 ## 				EXPERIMENTS				  ##
 ############################################
 
+############
 ## CASE A ##
+############
+
+##  LOG  ##
 [Config Experiment_DR_SizeChanging_LOG]
 sim-time-limit = 1800s													# one Hour
-warmup-period = 400s
+warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
 CRAN2.cellularSystem.dr = ${1.4,1.45,1.5,1.55,1.6,1.7,1.8,1.9,2,2.1}Mbps		
@@ -274,6 +307,12 @@ CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
+
+## EXP ##
+
+##############
+##  CASE B  ##
+##############
 
 #############################################
 ## OTHERS CONFIG (TO BE DELETED)	#########
