--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -314,6 +314,20 @@ CRAN2.as.timeMean = 0.01												# 10 ms
 ##  CASE B  ##
 ##############
 
+## EXP ##
+[Config Find-compr-trade-off]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1500
+CRAN2.as.timeMean = 0.01
+## 1.2, 1.3, 1.4
+CRAN2.cellularSystem.dr = ${1.25}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
 #############################################
 ## OTHERS CONFIG (TO BE DELETED)	#########
 #############################################
