--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -212,3 +212,45 @@ CRAN2.as.timeMean = 0.01
 CRAN2.as.sizeVariance = 0.3	
 CRAN2.cellularSystem.dr = 1.4Mbps
 CRAN2.as.sizeMean = 1500
+
+############################################
+## 				EXPERIMENTS				  ##
+############################################
+
+############
+## CASE A ##
+############
+
+##  LOG  ##
+[Config Experiment_DR_SizeChanging_LOG]
+sim-time-limit = 1800s													# one Hour
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
+CRAN2.cellularSystem.dr = ${1.4,1.45,1.5,1.55,1.6,1.7,1.8,1.9,2,2.1}Mbps		
+CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}												
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
+CRAN2.as.timeMean = 0.01												# 10 ms
+
+## EXP ##
+
+##############
+##  CASE B  ##
+##############
+
+## LOGNORM ##
+[Config compression_trade-off]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7.313	# ~1500 B
+CRAN2.as.timeMean = 0.01
+## 1.2, 1.3, 1.4
+CRAN2.cellularSystem.dr = 1.25Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
