--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -302,8 +302,8 @@ sim-time-limit = 1800s													# one Hour
 warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
-CRAN2.cellularSystem.dr = ${1.4,1.45,1.5,1.55,1.6,1.7,1.8,1.9,2,2.1}Mbps		
-CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}												
+CRAN2.cellularSystem.dr = ${1.4,1.5,1.6,1.7,1.8,1.9}Mbps#,2,2.1#		
+CRAN2.as.sizeMean = ${6.93,7.00,7.09,7.170,7.245,7.313}												
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
