--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -360,11 +360,25 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
 
+[Config test]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 5
+CRAN2.as.sizeMean = 7.245												
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.compression_on = true
+CRAN2.as.sizeVariance = ${0.1}											
+CRAN2.cellularSystem.compression_rate = ${60}
+CRAN2.cellularSystem.dr = ${3.7}Mbps
+CRAN2.N_cells = ${8}	
+CRAN2.cellularSystem.rrh[*].alfa = ${ 0.015}
+
 ##############################################
 ############		2kr			##############
 ##############################################
 
-[Config tkr]
+[Config tkr_log]
 sim-time-limit = 1800s
 warmup-period = 350s
 repeat = 5
@@ -375,5 +389,18 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.as.sizeVariance = ${0.1, 0.5}											
 CRAN2.cellularSystem.compression_rate = ${30, 60}
 CRAN2.cellularSystem.dr = ${1.1, 3.7}Mbps
-CRAN2.N_cells = ${7, 18}	
-CRAN2.cellularSystem.rrh[*].alfa = ${0.01, 0.02}
+CRAN2.N_cells = ${8, 18}	
+CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
+
+[Config tkr_exp]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 5
+CRAN2.as.sizeMean = 1400												
+CRAN2.as.sizeDistribution = 1
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.compression_on = true											
+CRAN2.cellularSystem.compression_rate = ${30, 60}
+CRAN2.cellularSystem.dr = ${1.1, 3.7}Mbps
+CRAN2.N_cells = ${8, 18}	
+CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
