Added Veronica's Configs

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -57,8 +57,10 @@ CRAN2.N_cells = 1
 ##############################
 ## 	  Validation configs 	##
 ##############################
-
+################
 ## DEGENERACY ##
+################
+
 [Config degeneracy_1]
 repeat = 10
 CRAN2.N_cells = 0
@@ -80,8 +82,33 @@ CRAN2.cellularSystem.dr = ${0.1}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
-
+#################
 ## CONSISTENCY ##
+#################
+
+## EXP ##
+[Config consistency_A_exp_40]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 40kbps
+
+[Config consistency_B_exp_40]
+extends = consistency_A_exp_40
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20	# defaul value
+
+[Config consistency_A_exp_80]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.25
+CRAN2.cellularSystem.dr = 80kbps
+
+[Config consistency_B_exp_80]
+extends = consistency_A_exp_80
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20	# defaul value
+CRAN2.cellularSystem.rrh[*].alfa = 0.5
+
+## LOG ##
 [Config consistency_log]
 repeat = 25
 CRAN2.N_cells = 10
@@ -123,7 +150,22 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
+#################
 ## CONTINUITIY ##
+#################
+
+## EXP ##
+[Config continuity_A_exp]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20, 22, 40, 42, 44}kbps
+
+[Config continuity_B_exp]
+extends = continuity_A_exp
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+## LOG ##
 [Config continuity_log_68]
 repeat = 25
 CRAN2.N_cells = 10
@@ -173,7 +215,36 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
+##################
 ## MONOTONICITY ##
+##################
+
+## EXP ##
+[Config monotonicity_A_exp_cells]
+sim-time-limit = 80000s
+repeat = 10
+CRAN2.N_cells = ${3, 7, 10, 16, 20}
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 20kbps
+
+[Config monotonicity_B_exp_cells]
+extends = monotonicity_A_exp_cells
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config monotonicity_A_exp_dr]
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20, 23, 30}kbps
+
+[Config monotonicity_B_exp_dr]
+extends = monotonicity_A_exp_dr
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+## LOG ##
 [Config monotonicity_test_log]
 repeat = 25
 CRAN2.N_cells = ${5 , 10 , 35 , 50}
@@ -388,7 +459,7 @@ CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.compression_on = true
 CRAN2.as.sizeVariance = ${0.1, 0.5}											
 CRAN2.cellularSystem.compression_rate = ${30, 60}
-CRAN2.cellularSystem.dr = ${1.2, 3.7}Mbps
+CRAN2.cellularSystem.dr = ${1.3,2}Mbps
 CRAN2.N_cells = ${8, 18}	
 CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
 
