--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -280,6 +280,22 @@ CRAN2.as.sizeVariance = 0.3
 ## Validation against the theoretical model ##
 ##############################################
 
+## CASE EXPONENTIAL DISTRIB. OF PKT SIZE
+
+# CASE A
+[Config exp-theo_A]
+repeat = 20
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20}kbps
+
+# CASE B
+[Config exp-theo_B]
+extends = exp-theo_A
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
 ## CASE LOGNORMAL DISTRIB. OF PKT SIZE
 
 # CASE A
@@ -393,8 +409,7 @@ repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.sizeMean = 1500
 CRAN2.as.timeMean = 0.01
-## 1.2, 1.3, 1.4
-CRAN2.cellularSystem.dr = ${1.25}Mbps
+CRAN2.cellularSystem.dr = ${1.2,1.25,1.3,1.4}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
@@ -409,7 +424,7 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeMean = 7.313	# ~1500 B
 CRAN2.as.timeMean = 0.01
 ## 1.2, 1.3, 1.4
-CRAN2.cellularSystem.dr = 1.2Mbps
+CRAN2.cellularSystem.dr = ${1.2,1.25,1.3,1.4}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
@@ -444,6 +459,26 @@ CRAN2.cellularSystem.compression_rate = ${60}
 CRAN2.cellularSystem.dr = ${3.7}Mbps
 CRAN2.N_cells = ${8}	
 CRAN2.cellularSystem.rrh[*].alfa = ${ 0.015}
+
+[Config speed_test_1Gbps_00002]
+sim-time-limit = 60s
+repeat = 5
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.00002
+CRAN2.cellularSystem.dr = 1Gbps
+
+[Config speed_test_Mbps]
+sim-time-limit = 90s
+repeat = 5
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.0001
+CRAN2.cellularSystem.dr = ${125}Mbps
+
+[Config calibration2]
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${82}Mbps
+CRAN2.N_cells = 15
 
 ##############################################
 ############		2kr			##############
