--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -429,11 +429,41 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
-#############################################
-## OTHERS CONFIG (TO BE DELETED)	#########
-#############################################
+##############################################
+############		2kr			##############
+##############################################
+
+[Config tkr_log]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 5
+CRAN2.as.sizeMean = 7.245												
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.compression_on = true
+CRAN2.as.sizeVariance = ${0.1, 0.5}											
+CRAN2.cellularSystem.compression_rate = ${30, 60}
+CRAN2.cellularSystem.dr = ${1.3,2}Mbps
+CRAN2.N_cells = ${8, 18}	
+CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
+
+[Config tkr_exp]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 5
+CRAN2.as.sizeMean = 1400												
+CRAN2.as.sizeDistribution = 1
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.compression_on = true											
+CRAN2.cellularSystem.compression_rate = ${30, 60}
+CRAN2.cellularSystem.dr = ${1.2, 3.7}Mbps
+CRAN2.N_cells = ${8, 18}	
+CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
 
 
+############################################
+#### 	OTHERS CONFIG (TO BE DELETED)	####
+############################################
 
 [Config Experiment_SizeChanging_LOG]
 sim-time-limit = 1800s													# one Hour
@@ -479,34 +509,3 @@ CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${82}Mbps
 CRAN2.N_cells = 15
-
-##############################################
-############		2kr			##############
-##############################################
-
-[Config tkr_log]
-sim-time-limit = 1800s
-warmup-period = 350s
-repeat = 5
-CRAN2.as.sizeMean = 7.245												
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.compression_on = true
-CRAN2.as.sizeVariance = ${0.1, 0.5}											
-CRAN2.cellularSystem.compression_rate = ${30, 60}
-CRAN2.cellularSystem.dr = ${1.3,2}Mbps
-CRAN2.N_cells = ${8, 18}	
-CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
-
-[Config tkr_exp]
-sim-time-limit = 1800s
-warmup-period = 350s
-repeat = 5
-CRAN2.as.sizeMean = 1400												
-CRAN2.as.sizeDistribution = 1
-CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.compression_on = true											
-CRAN2.cellularSystem.compression_rate = ${30, 60}
-CRAN2.cellularSystem.dr = ${1.2, 3.7}Mbps
-CRAN2.N_cells = ${8, 18}	
-CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
