configuration low load + updated gitignore

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -242,9 +242,9 @@ CRAN2.as.sizeMean = 1500
 ##  CASE B  ##
 ##############
 
-## LOGNORM ##
+## LOGNORMAL ##
 [Config compression_trade-off]
-sim-time-limit = 1500s
+sim-time-limit = 1800s
 warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10										
@@ -255,6 +255,34 @@ CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.05}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		# ${20..50 step 2}		#${10..30 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_low_load]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7.313	# ~1500 B
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.5..1.9 step 0.1}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..21 step 10}		
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_low_load_size]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7, 7.03, 7.06}
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.2Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..31 step 10}		
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 ## LOGNORM ##
@@ -270,4 +298,32 @@ CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.1}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		#${10..30 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+#################
+## EXPONENTIAL ##
+#################
+
+[Config find-compr-trade-off]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1500
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.4}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${10..51 step 4}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_exp_low_load]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1500
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${2}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..61 step 10}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
