--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -155,21 +155,35 @@ CRAN2.cellularSystem.compression_rate = 20
 
 ### Calibration ###
 
-[Config calibration_sim-time]
-sim-time-limit = 10800s	    # 3h
+[Config calibration_sim-time_no-compression_exp]
+sim-time-limit = 3600s	    # 1h
 repeat = 5
-CRAN2.N_cells = 10
+CRAN2.N_cells = 8
 CRAN2.cellularSystem.dr = 1.3 Mbps
 CRAN2.as.sizeMean = 1500
-CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
+CRAN2.as.timeMean = 0.01
+
+[Config calibration_sim-time_exp]
+extends = calibration_sim-time_no-compression_exp
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 25	#${5,10,15,20,25,30,35,40}
+CRAN2.cellularSystem.compression_rate = 20
 CRAN2.cellularSystem.rrh[*].alfa = 0.01	
 
-[Config calibration_sim_with_warmup]
-extends = calibration_sim-time
-warmup-period = 350s
+[Config calibration_sim-time_no-compression_log]
+sim-time-limit = 7200s	# 3600s	    # 1h
+repeat = 5
+CRAN2.N_cells = 8
+CRAN2.cellularSystem.dr = 1.3 Mbps								
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7.313	# ~1500 B
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.as.timeMean = 0.01
 
+[Config calibration_sim-time_log]
+extends = calibration_sim-time_no-compression_log
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+CRAN2.cellularSystem.rrh[*].alfa = 0.01	
 
 [Config calibration_alpha]
 sim-time-limit = 7200s	# three Hours
@@ -230,7 +244,6 @@ sim-time-limit = 1800s													# 30 min
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.timeMean = 0.01
-CRAN2.as.sizeVariance = 0.3	
 CRAN2.cellularSystem.dr = 1.4Mbps
 CRAN2.as.sizeMean = 1500
 
@@ -256,6 +269,21 @@ CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.05}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		# ${20..50 step 2}		#${10..30 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_load]
+sim-time-limit = 1500s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7.22, 7.23}	#${6.97, 7, 7.17, 7.313}	
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.3Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		# ${20..50 step 2}		#${10..30 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
 
 [Config compression_low_load]
 sim-time-limit = 1800s
@@ -327,3 +355,17 @@ CRAN2.cellularSystem.dr = ${2}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0..61 step 10}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_load_exp]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${1330}	#${1000, 1064, 1300, 1500}	
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.3Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..91 step 10}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+
