--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -160,7 +160,7 @@ sim-time-limit = 3600s	    # 1h
 repeat = 5
 CRAN2.N_cells = 8
 CRAN2.cellularSystem.dr = 1.3 Mbps
-CRAN2.as.sizeMean = 1500
+CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
 
 [Config calibration_sim-time_exp]
@@ -170,7 +170,7 @@ CRAN2.cellularSystem.compression_rate = 20
 CRAN2.cellularSystem.rrh[*].alfa = 0.01	
 
 [Config calibration_sim-time_no-compression_log]
-sim-time-limit = 7200s	# 3600s	    # 1h
+sim-time-limit = 3600s	    # 1h
 repeat = 5
 CRAN2.N_cells = 8
 CRAN2.cellularSystem.dr = 1.3 Mbps								
@@ -240,7 +240,7 @@ CRAN2.cellularSystem.rrh[*].alfa = 0.01			# ${0.01, 0.005, 0.001}
 
 
 [Config warmup-extr-caseA_exp]
-sim-time-limit = 1800s													# 30 min
+sim-time-limit = 1800s
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.timeMean = 0.01
@@ -339,9 +339,9 @@ repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.sizeMean = 1500
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${1.4}Mbps
+CRAN2.cellularSystem.dr = ${1.35, 1.4}Mbps
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${10..51 step 4}
+CRAN2.cellularSystem.compression_rate = ${30, 32, 34}	#${10..51 step 4}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 [Config compression_exp_low_load]
