--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -57,6 +57,7 @@ CRAN2.N_cells = 1
 ##############################
 ## 	  Validation configs 	##
 ##############################
+
 ################
 ## DEGENERACY ##
 ################
@@ -376,6 +377,43 @@ CRAN2.cellularSystem.compression_rate = 5
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 ############################################
+####		SIMTIME CALIBRATION			####
+############################################
+
+## EXP ##
+[Config calibration_sim-time_no-compression_exp]
+sim-time-limit = 3600s	    # 1h
+repeat = 5
+CRAN2.N_cells = 8
+CRAN2.cellularSystem.dr = 1.3 Mbps
+CRAN2.as.sizeMean = 1500
+CRAN2.as.timeMean = 0.01
+
+[Config calibration_sim-time_exp]
+extends = calibration_sim-time_no-compression_exp
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+CRAN2.cellularSystem.rrh[*].alfa = 0.01	
+
+## LOG ##
+[Config calibration_sim-time_no-compression_log]
+sim-time-limit = 7200s	# 3600s	    # 1h
+repeat = 5
+CRAN2.N_cells = 8
+CRAN2.cellularSystem.dr = 1.3 Mbps								
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7.313	# ~1500 B
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.as.timeMean = 0.01
+
+[Config calibration_sim-time_log]
+extends = calibration_sim-time_no-compression_log
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+CRAN2.cellularSystem.rrh[*].alfa = 0.01	
+
+
+############################################
 ## 				EXPERIMENTS				  ##
 ############################################
 
@@ -393,9 +431,54 @@ CRAN2.cellularSystem.dr = ${1.4,1.5,1.6,1.7,1.8,1.9}Mbps#,2,2.1#
 CRAN2.as.sizeMean = ${6.93,7.00,7.09,7.170,7.245,7.313}												
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
-CRAN2.as.timeMean = 0.01												# 10 ms
+CRAN2.as.timeMean = 0.01	
+
+[Config experiment_log]
+sim-time-limit = 1800s
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7.09, 7.245, 7.313}		# 6.397, 6.55, 6.684, 6.80, 6.907, 7.003, 7.170,
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.7Mbps 		# ${1.3..2 step 0.1}Mbps
+											# 10 ms
 
 ## EXP ##
+[Config experiment_alpha]
+sim-time-limit = 7200s	# three Hours
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 7Mbps
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
+CRAN2.cellularSystem.rrh[*].alfa = 0.001	
+
+[Config experiment_speed]
+sim-time-limit = 1800s
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.01
+# CRAN2.cellularSystem.dr = ${1.3..2 step 0.1}Mbps
+CRAN2.cellularSystem.dr = ${1.19..1.25 step 0.01}Mbps
+
+[Config experiment_size]
+sim-time-limit = 1800s	# 30 min
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${600..1801 step 100}
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.7Mbps
+
+[Config experiment_dr_size_exp]
+sim-time-limit = 1800s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${1000..1501 step 100}
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
 
 ##############
 ##  CASE B  ##
@@ -414,6 +497,31 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
+[Config compression_exp_low_load]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1500
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${2}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..61 step 10}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_load_exp]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${1330}	#${1000, 1064, 1300, 1500}	
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.3Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..91 step 10}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+
 ## LOG ##
 [Config compression_trade-off]
 sim-time-limit = 1800s
@@ -427,6 +535,20 @@ CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${1.2,1.25,1.3,1.4}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_trade-off_size]
+sim-time-limit = 600s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 6.93	# ~1024 B
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.1}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		#${10..30 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 ##############################################
@@ -459,53 +581,3 @@ CRAN2.cellularSystem.compression_rate = ${30, 60}
 CRAN2.cellularSystem.dr = ${1.2, 3.7}Mbps
 CRAN2.N_cells = ${8, 18}	
 CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
-
-
-############################################
-#### 	OTHERS CONFIG (TO BE DELETED)	####
-############################################
-
-[Config Experiment_SizeChanging_LOG]
-sim-time-limit = 1800s													# one Hour
-repeat = 10
-CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
-CRAN2.cellularSystem.dr = 1.7Mbps										# Checking the behaviour of the system with FIXED service time (FIXED to 1.7 Mbits)
-#7.908 (1000Bytes), ... , 7.245 (1400Bytes) , ... , 7.496 (1800Bytes)
-CRAN2.as.sizeMean = ${6.397,6.55, 6.684, 6.80,6.907, 7.003, 7.09, 7.170, 7.245, 7.313 , 7.378, 7.438, 7.496}													
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
-CRAN2.as.timeMean = 0.01												# 10 ms
-
-[Config test]
-sim-time-limit = 1800s
-warmup-period = 350s
-repeat = 5
-CRAN2.as.sizeMean = 7.245												
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.compression_on = true
-CRAN2.as.sizeVariance = ${0.1}											
-CRAN2.cellularSystem.compression_rate = ${60}
-CRAN2.cellularSystem.dr = ${3.7}Mbps
-CRAN2.N_cells = ${8}	
-CRAN2.cellularSystem.rrh[*].alfa = ${ 0.015}
-
-[Config speed_test_1Gbps_00002]
-sim-time-limit = 60s
-repeat = 5
-CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.00002
-CRAN2.cellularSystem.dr = 1Gbps
-
-[Config speed_test_Mbps]
-sim-time-limit = 90s
-repeat = 5
-CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.0001
-CRAN2.cellularSystem.dr = ${125}Mbps
-
-[Config calibration2]
-CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${82}Mbps
-CRAN2.N_cells = 15
