added/edit some comments in bbu.cc + minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ CRAN2/.metadata/
 CRAN2/src/.qtenvrc
 CRAN2/.cmdenv-log
 .cmdenv-log
-/.metadata/
+.metadata/
 CRAN/.project
 CRAN2/.cproject
 **/results
