--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,6 +2,7 @@
 network = CRAN2
 sim-time-limit = 120000s
 repeat = 6
+
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
 
@@ -54,6 +55,14 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.N_cells = 1
 
+[Config debug_0_cells]
+repeat = 10
+CRAN2.N_cells = 0
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+
+
 ##############################
 ## 	  Validation configs 	##
 ##############################
@@ -62,32 +71,33 @@ CRAN2.N_cells = 1
 ## DEGENERACY ##
 ################
 
-[Config degeneracy_1]
+[Config degeneracy_1_size]
 repeat = 10
-CRAN2.N_cells = 0
-CRAN2.cellularSystem.dr = ${20}kbps
-CRAN2.as.sizeMean = 1024
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 0
 CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 20kbps
 
-[Config degeneracy_2]
+[Config degeneracy_2_dr_0]
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${0}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
-[Config degeneracy_3]
+[Config degeneracy_3_low_speed]
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${0.1}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
+
 #################
 ## CONSISTENCY ##
 #################
 
-## EXP ##
+## EXPONENTIAL ##
 [Config consistency_A_exp_40]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
@@ -109,7 +119,7 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20	# defaul value
 CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
-## LOG ##
+## LOGNORMAL ##
 [Config consistency_log]
 repeat = 25
 CRAN2.N_cells = 10
@@ -155,7 +165,7 @@ CRAN2.cellularSystem.rrh[*].alfa = 0.5
 ## CONTINUITIY ##
 #################
 
-## EXP ##
+## EXPONENTIAL ##
 [Config continuity_A_exp]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
@@ -166,7 +176,7 @@ extends = continuity_A_exp
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-## LOG ##
+## LOGNORMAL ##
 [Config continuity_log_68]
 repeat = 25
 CRAN2.N_cells = 10
@@ -220,7 +230,7 @@ CRAN2.cellularSystem.compression_rate = 20
 ## MONOTONICITY ##
 ##################
 
-## EXP ##
+## EXPONENTIAL ##
 [Config monotonicity_A_exp_cells]
 sim-time-limit = 80000s
 repeat = 10
@@ -245,7 +255,7 @@ extends = monotonicity_A_exp_dr
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-## LOG ##
+## LOGNORMAL ##
 [Config monotonicity_test_log]
 repeat = 25
 CRAN2.N_cells = ${5 , 10 , 35 , 50}
@@ -281,7 +291,7 @@ CRAN2.as.sizeVariance = 0.3
 ## Validation against the theoretical model ##
 ##############################################
 
-## CASE EXPONENTIAL DISTRIB. OF PKT SIZE
+## CASE EXPONENTIAL DISTRIBUTION OF PKT SIZE
 
 # CASE A
 [Config exp-theo_A]
@@ -297,10 +307,10 @@ extends = exp-theo_A
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-## CASE LOGNORMAL DISTRIB. OF PKT SIZE
+## CASE LOGNORMAL DISTRIBUTION OF PKT SIZE
 
 # CASE A
-[Config ValidationAgainstTheoreticalModel_A_Log]
+[Config lognorm-theo_A]
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 20kbps
@@ -310,20 +320,14 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.as.timeMean = 0.5
 
 # CASE B
-[Config ValidationAgainstTheoreticalModel_B_Log]
-repeat = 10
-CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = 20kbps
-CRAN2.as.sizeMean = 6.93
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.sizeVariance = 0.3
-CRAN2.as.timeMean = 0.5
+[Config lognorm-theo_B]
+extends = lognorm-theo_A
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-##########################
-## 		WARMUP Check 	##
-##########################
+##############################
+## 		WARMUP Calibration 	##
+##############################
 
 ## CASE A ##
 
@@ -345,33 +349,19 @@ repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = 1.4Mbps
-CRAN2.as.sizeMean = 1500		
-CRAN2.as.sizeDistribution = 1
+CRAN2.as.sizeMean = 1500
 
 ## CASE B ##
 ## Lognormal size distribution case ##
 [Config warmup-extr-caseB_log]
-sim-time-limit = 1800s													# one Hour
-repeat = 10
-CRAN2.N_cells = 10
-CRAN2.as.timeMean = 0.01
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.sizeVariance = 0.3	
-CRAN2.cellularSystem.dr = 1.4Mbps
-CRAN2.as.sizeMean = 7.313
+extends = warmup-extr-caseA_log
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 5
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 ## Exponential size distribution case ##
 [Config warmup-extr-caseB_exp]
-sim-time-limit = 1800s													# one Hour
-repeat = 10
-CRAN2.N_cells = 10
-CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = 1.4Mbps
-CRAN2.as.sizeMean = 1500		
-CRAN2.as.sizeDistribution = 1
+extends = warmup-extr-caseA_exp
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 5
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
@@ -380,7 +370,7 @@ CRAN2.cellularSystem.rrh[*].alfa = 0.01
 ####		SIMTIME CALIBRATION			####
 ############################################
 
-## EXP ##
+## EXPONENTIAL ##
 [Config calibration_sim-time_no-compression_exp]
 sim-time-limit = 3600s	    # 1h
 repeat = 5
@@ -395,9 +385,9 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.cellularSystem.rrh[*].alfa = 0.01	
 
-## LOG ##
+## LOGNORMAL ##
 [Config calibration_sim-time_no-compression_log]
-sim-time-limit = 7200s	# 3600s	    # 1h
+sim-time-limit = 3600s	    # 1h
 repeat = 5
 CRAN2.N_cells = 8
 CRAN2.cellularSystem.dr = 1.3 Mbps								
@@ -427,7 +417,7 @@ sim-time-limit = 1800s													# one Hour
 warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
-CRAN2.cellularSystem.dr = ${1.4,1.5,1.6,1.7,1.8,1.9}Mbps#,2,2.1#		
+CRAN2.cellularSystem.dr = ${1.4..1.9 step 0.1}Mbps	#,2,2.1#		
 CRAN2.as.sizeMean = ${6.93,7.00,7.09,7.170,7.245,7.313}												
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
@@ -485,14 +475,14 @@ CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
 ##############
 
 ## EXP ##
-[Config Find-compr-trade-off]
+[Config find-compr-trade-off]
 sim-time-limit = 1800s
 warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.sizeMean = 1500
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${1.2,1.25,1.3,1.4}Mbps
+CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.05}Mbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
@@ -523,6 +513,48 @@ CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 
 ## LOG ##
+[Config compression_load]
+sim-time-limit = 1500s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7.22, 7.23}	#${6.97, 7, 7.17, 7.313}	
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.3Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..91 step 10}		# ${20..50 step 2}		#${10..30 step 2}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_low_load]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7.313	# ~1500 B
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.5..1.9 step 0.1}Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..21 step 10}		
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
+[Config compression_low_load_size]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 10
+CRAN2.N_cells = 10										
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7, 7.03, 7.06}
+CRAN2.as.sizeVariance = 0.3		
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.2Mbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0..31 step 10}		
+CRAN2.cellularSystem.rrh[*].alfa = 0.01
+
 [Config compression_trade-off]
 sim-time-limit = 1800s
 warmup-period = 350s
@@ -532,13 +564,13 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeMean = 7.313	# ~1500 B
 CRAN2.as.timeMean = 0.01
 ## 1.2, 1.3, 1.4
-CRAN2.cellularSystem.dr = ${1.2,1.25,1.3,1.4}Mbps
+CRAN2.cellularSystem.dr = ${1.2..1.4 step 0.05}Mbps
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${30..50 step 2}
+CRAN2.cellularSystem.compression_rate = ${20..50 step 2}	#${0..91 step 10}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01
 
 [Config compression_trade-off_size]
-sim-time-limit = 600s
+sim-time-limit = 1800s
 warmup-period = 350s
 repeat = 10
 CRAN2.N_cells = 10										
@@ -573,8 +605,7 @@ CRAN2.cellularSystem.rrh[*].alfa = ${0.010, 0.015}
 sim-time-limit = 1800s
 warmup-period = 350s
 repeat = 5
-CRAN2.as.sizeMean = 1400												
-CRAN2.as.sizeDistribution = 1
+CRAN2.as.sizeMean = 1400	
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.compression_on = true											
 CRAN2.cellularSystem.compression_rate = ${30, 60}
