--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -216,9 +216,9 @@ CRAN2.cellularSystem.dr = 1.7Mbps
 sim-time-limit = 1800s
 repeat = 10
 CRAN2.N_cells = 10
-CRAN2.as.sizeMean = ${1000..1501 step 100}
+CRAN2.as.sizeMean = ${1200}
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
+CRAN2.cellularSystem.dr = ${2..2.1 step 0.1}Mbps
 
 [Config calibration_log]
 sim-time-limit = 1800s
